--- a/kontext/src/app/filter/filter.component.html
+++ b/kontext/src/app/filter/filter.component.html
@@ -51,7 +51,10 @@
   <div class="form-group">
     <div class="col-xs-6"><button class="btn btn-block ink-reaction btn-primary-light" data-dismiss="offcanvas">Cancel</button></div>
     <div class="col-xs-6"><button (click)="filterMenu()" class="btn btn-block ink-reaction btn-accent-light" data-dismiss="offcanvas">Go!</button></div>
-
-
+    <div class="col-xs-12">
+      <button id="close_canvas" (click)="toggleFilter()" class="btn btn-block btn-primary-dark">
+        Close
+      </button>
+    </div>
   </div>
 </form>
