--- a/kontext/src/app/header/header.component.html
+++ b/kontext/src/app/header/header.component.html
@@ -36,9 +36,19 @@
         <li>
           <!-- Filter Toggle-->
           <form class="navbar-item">
-            <a class="btn btn-icon-toggle ink-reaction" title="filter"  href="#offcanvas-right" data-toggle="offcanvas">
+            <a class="btn btn-icon-toggle ink-reaction" id="headerFilterToggle" title="filter"
+               href="#offcanvas-right" data-toggle="offcanvas">
                 <i class="fa fa-filter fa-2x" *ngIf="filter_params" style="color:#f31f32"></i>
                 <i class="fa fa-filter fa-2x" *ngIf="!filter_params" style="color:#8d8c89"></i>
+            </a>
+          </form>
+        </li>
+        <li>
+          <!-- Filter Toggle-->
+          <form class="navbar-item">
+            <a class="btn btn-icon-toggle ink-reaction" (click)="toggleFilter()">
+                <i class="fa fa-filter fa-2x" style="color:#f31f32"></i>
+                <!--<i class="fa fa-filter fa-2x" *ngIf="!filter_params" style="color:#8d8c89"></i>-->
             </a>
           </form>
         </li>
