--- a/kontext/src/app/content/content.component.html
+++ b/kontext/src/app/content/content.component.html
@@ -1,51 +1,17 @@
+
+
 <!-- BEGIN CONTENT-->
 <div id="content">
-  <!--<section class="col-xs-10 col-xs-offset-2">-->
-    <!--<div class="section-header">-->
-      <!--<ol class="breadcrumb">-->
-        <!--<li class="active">Off-canvas</li>-->
-      <!--</ol>-->
-    <!--</div>-->
-    <!--<div class="section-body contain-lg">-->
+  <div class="col-xs-offset-3 col-xs-9">
 
-      <!--&lt;!&ndash; BEGIN POSITIONING &ndash;&gt;-->
-      <!--<div class="row">-->
-        <!--<div class="col-lg-12">-->
-          <!--<h4>Positioning</h4>-->
-        <!--</div>&lt;!&ndash;end .col &ndash;&gt;-->
-        <!--<div class="col-lg-3 col-md-4">-->
-          <!--<article class="margin-bottom-xxl">-->
-            <!--<p>-->
-              <!--You can place an off-canvas either on the left or the right side off the screen.-->
-            <!--</p>-->
-          <!--</article>-->
-        <!--</div>&lt;!&ndash;end .col &ndash;&gt;-->
-        <!--<div class="col-lg-offset-1 col-md-8">-->
-          <!--<div class="card">-->
-            <!--<div class="card-body">-->
-              <!--<a class="btn btn-raised ink-reaction btn-default-bright" href="#offcanvas-left" data-toggle="offcanvas">-->
-                <!--<i class="md md-arrow-back"></i>-->
-                <!--Open left off-canvas-->
-              <!--</a>-->
-              <!--<a class="btn btn-raised ink-reaction btn-default-bright pull-right" href="#offcanvas-right" data-toggle="offcanvas">-->
-                <!--Open right off-canvas-->
-                <!--<i class="md md-arrow-forward"></i>-->
-              <!--</a>-->
-            <!--</div>&lt;!&ndash;end .card-body &ndash;&gt;-->
-          <!--</div>&lt;!&ndash;end .card &ndash;&gt;-->
-        <!--</div>&lt;!&ndash;end .col &ndash;&gt;-->
-      <!--</div>&lt;!&ndash;end .row &ndash;&gt;-->
-      <!--&lt;!&ndash; END POSITIONING &ndash;&gt;-->
-    <!--</div>&lt;!&ndash;end .section-body &ndash;&gt;-->
-  <!--</section>-->
-  <div class="container">
-
+    <button class="btn btn-default" (click)="addToast('title', 'this is a longer message I want to see what will happen with the size of the element message!')">click!</button>
   </div>
-</div><!--end #content-->
+</div>
+
 <!-- END CONTENT -->
 
 <!-- BEGIN OFFCANVAS RIGHT -->
-<div class="offcanvas" *ngIf="filter_menu">
+<div class="offcanvas">
   <div id="offcanvas-right" class="offcanvas-pane width-12">
     <div class="offcanvas-head">
       <header>Project Filter</header>
@@ -61,6 +27,7 @@
   </div>
 </div>
  <!--END OFFCANVAS RIGHT-->
+
 
 
 
