--- a/kontext/src/app/menu/menu.component.css
+++ b/kontext/src/app/menu/menu.component.css
@@ -23,6 +23,15 @@
   color: #ffffff;
   font-style: italic;
   /*font-weight: bold;*/
+  text-shadow: 2px 2px #000000;
+  cursor: pointer;
+}
+.page-label{
+  font-size: 20px;
+  padding-left: 10px;
+  color: #c6c2be;
+  /*font-style: italic;*/
+  /*font-weight: bold;*/
   cursor: pointer;
 }
 
