--- a/kontext/src/styles.css
+++ b/kontext/src/styles.css
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/cdk/overlay-prebuilt.css";
+@import "../node_modules/ngx-toasta/styles/style-material.css";
+@import "../node_modules/ngx-toasta/styles/style-default.css";
+@import "../node_modules/ngx-toasta/styles/style-bootstrap.css";
